<resources>
    <string name="app_name">basin</string>
    <string name="app_id">344036332602738</string>
    <string name="event_details">Event Details</string>
    <string name="event_map">Event Map</string>
    <string name="user_profile">User Profile</string>
    <string name="event_lists">Event Lists</string>
    <string name="edit_event">Edit Event</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_maps">Map</string>
    <string name="login">Login</string>
    <string name="time_hint">00:00</string>
    <string name="oops">Something went wrong</string>
    <string name="results">Results</string>
    <string name="get_all_users">Get All Basin Users</string>
    <string name="profile_icon_title">User Profile</string>
    <string name="map_icon_title">Event Map</string>
    <string name="lists_icon_title">My Events</string>
    <string name="login_wait">Logging in...</string>
    <string name="login_failed">Login failed!</string>
    <string name="login_error">Something went wrong during login.</string>
    <string name="save_icon_title">Save</string>
    <string name="delete_icon_title">Delete</string>
    <string name="cancel_icon_title">Cancel</string>
    <string name="home_icon_title">Home</string>
    <string name="gmaps_icon_title">Google Maps</string>
    <string name="attending_q">Attending?</string>
    <string name="attending_y">Attending!</string>
    <string name="description_hint">Description</string>
    <string name="title_hint">Title</string>
    <string name="coordinator_hint">Coordinator</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="attendees">Attendees</string>
    <string name="no_about">This user has nothing in their about section! :(</string>
    <string name="likes">Likes</string>
    <string name="created_events">Created Events</string>
    <string name="attended_events">Attended Events</string>
    <string name="image_maps_description">Google Maps Location</string>
    <string name="confirm">Sure</string>
    <string name="cancel">Cancel</string>
    <string name="edit_about">Say something about yourself</string>
    <string name="location_enabled">This application requires location services to be enabled. Will you enable it?</string>
    <string name="about">This is an application for creating and finding local events. It was created as a senior project for Hanover College\'s Computer Science department and was written by Slaton Blickman.\n\nHere\'s a few tips:\nHit the map icon to find events anywhere in the world. You can long tap the map anywhere to create a new event.\nClick on the person icon to see your user profile.\nSelect the list icon to view the events you are attending and created.</string>
</resources>
