<!-- Menu file for `activity_movies.xml` is located in a file
     such as `res/menu/menu_movies.xml`  -->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/delete_icon"
        android:icon="@drawable/trash_icon"
        android:orderInCategory="1"
        android:visible="false"
        app:showAsAction="always"
        android:title="@string/delete_icon_title">
    </item>
    <item
        android:id="@+id/edit_icon"
        android:icon="@drawable/pencil_icon"
        android:visible="false"
        android:orderInCategory="2"
        app:showAsAction="always"
        android:title="@string/edit_event">
    </item>
    <item
        android:id="@+id/check_attending_icon"
        android:icon="@drawable/heart_icon"
        android:orderInCategory="3"
        android:checked="false"
        android:checkable="true"
        app:showAsAction="always|withText"
        android:title="@string/attending_q"/>
    <item
        android:id="@+id/profile_icon"
        android:icon="@drawable/user_icon"
        app:showAsAction="collapseActionView"
        android:title="@string/lists_icon_title">
    </item>
    <item
        android:id="@+id/marker_icon"
        android:icon="@drawable/marker_icon"
        android:orderInCategory="4"
        app:showAsAction="always"
        android:title="@string/map_icon_title">
    </item>
</menu>