<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="5dp" >

    <TextView
        android:text="@string/title_hint"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <com.facebook.login.widget.ProfilePictureView
        android:id="@+id/picture"
        android:layout_margin="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coordinator"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:text="@string/coordinator_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/coordinator"
        android:layout_centerInParent="true"
        android:layout_toStartOf="@+id/picture"/>

    <TextView
        android:text="@string/time"
        android:id="@+id/date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"/>

</RelativeLayout>
